ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "grafana-ingress"
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: alb-stage-grafana
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /login
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: 
    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  rules:
   - host : grafana.stage.synctreestudio.com
     http:
      paths:
        - pathType: ImplementationSpecific
          path: /*
          backend:
            service:
              name: "prometheus-grafana"
              port:
                number: 80
   - host : prom.stage.synctreestudio.com
     http:
      paths:
        - pathType: ImplementationSpecific
          path: /*
          backend:
            service:
              name: "prometheus-kube-prometheus-prometheus"
              port:
                number: 9090
